Add animation to all pages

--- a/advertising services.html
+++ b/advertising services.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <link rel="shortcut icon" type="image/jpg" href="imgs/fivicon.png">
     <title>سلسلة - خدمات التصميم والحملات الإعلانية</title>
@@ -188,11 +189,11 @@
     <section id="more-info" class="more-info-2 advertising-services advertising-services-more-info">
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
-                <figure class="w-100 h-100">
+                <figure class="w-100 h-100" data-aos="fade-left" data-aos-duration="1000">
                     <img src="imgs/صفحة التصميم والحملات الاعلانية/صورة رقم1.svg" class="img-fluid w-100" alt="img">
                 </figure>
                 <div class="w-100">
-                    <h3>خدمات التصميم</h3>
+                    <h3 data-aos="fade-right" data-aos-duration="1000">خدمات التصميم</h3>
                 </div>
             </div>
         </div>
@@ -201,7 +202,7 @@
     <section id="our-design">
         <div class="container">
             <div class="row gy-4">
-                <div class="col-lg-4 col-md-6 col-12">
+                <div class="col-lg-4 col-md-6 col-12" data-aos="zoom-in-left" data-aos-duration="1000">
                     <div class="our-design-block">
                         <img src="imgs/صفحة التصميم والحملات الاعلانية/أيقونات سكشن التصميم/1.svg" class="img-fluid"
                             alt="icon">
@@ -210,7 +211,7 @@
                             المستهدف وزيادة التفاعل.</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-12">
+                <div class="col-lg-4 col-md-6 col-12" data-aos="zoom-in" data-aos-duration="1000">
                     <div class="our-design-block">
                         <img src="imgs/صفحة التصميم والحملات الاعلانية/أيقونات سكشن التصميم/2.svg" class="img-fluid"
                             alt="icon">
@@ -222,7 +223,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-12">
+                <div class="col-lg-4 col-md-6 col-12" data-aos="zoom-in-right" data-aos-duration="1000">
                     <div class="our-design-block">
                         <img src="imgs/صفحة التصميم والحملات الاعلانية/أيقونات سكشن التصميم/3.svg" class="img-fluid"
                             alt="icon">
@@ -233,7 +234,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-12">
+                <div class="col-lg-4 col-md-6 col-12" data-aos="zoom-in-left" data-aos-duration="1000">
                     <div class="our-design-block">
                         <img src="imgs/صفحة التصميم والحملات الاعلانية/أيقونات سكشن التصميم/4.svg" class="img-fluid"
                             alt="icon">
@@ -244,7 +245,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-12">
+                <div class="col-lg-4 col-md-6 col-12" data-aos="zoom-in" data-aos-duration="1000">
                     <div class="our-design-block">
                         <img src="imgs/صفحة التصميم والحملات الاعلانية/أيقونات سكشن التصميم/5.svg" class="img-fluid"
                             alt="icon">
@@ -255,7 +256,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-12">
+                <div class="col-lg-4 col-md-6 col-12" data-aos="zoom-in-right" data-aos-duration="1000">
                     <div class="our-design-block">
                         <img src="imgs/صفحة التصميم والحملات الاعلانية/أيقونات سكشن التصميم/6.svg" class="img-fluid"
                             alt="icon">
@@ -271,7 +272,7 @@
 
     <section id="cta" class="tech-bd-cta">
         <div class="container">
-            <div>
+            <div data-aos="fade-down" data-aos-duration="1000">
                 <h3>الحملات الإعلانية والترويجية</h3>
             </div>
     </section>
@@ -279,28 +280,28 @@
     <section id="our-services" class="advertising-services">
         <div class="container text-center">
             <div class="main-our-services">
-                <div class="service-block linear-block">
+                <div class="service-block linear-block" data-aos="fade-down-left" data-aos-duration="1000">
                     <img src="imgs/صفحة التصميم والحملات الاعلانية/أيقونات سكشن الحملات الاعلانية/أيقونة رقم1.svg"
                         class="img-fluid" alt="icon">
                     <p class="our-service-title">
                         تخطيط وتنفيذ حملات إعلانية على محركات البحث وشبكات التواصل الاجتماعي ومنصات الإعلانات المختلفة.
                     </p>
                 </div>
-                <div class="service-block linear-block">
+                <div class="service-block linear-block" data-aos="fade-down-right" data-aos-duration="1000">
                     <img src="imgs/صفحة التصميم والحملات الاعلانية/أيقونات سكشن الحملات الاعلانية/أيقونة رقم2.svg"
                         class="img-fluid" alt="icon">
                     <p class="our-service-title">
                         تصميم وإنتاج محتوى إعلاني جذاب من صور وفيديوهات وإنفوجرافيك.
                     </p>
                 </div>
-                <div class="service-block linear-block">
+                <div class="service-block linear-block" data-aos="fade-left" data-aos-duration="1000">
                     <img src="imgs/صفحة التصميم والحملات الاعلانية/أيقونات سكشن الحملات الاعلانية/أيقونة رقم3.svg"
                         class="img-fluid" alt="icon">
                     <p class="our-service-title">
                         دراسة وتحليل عميق للسوق المستهدف.
                     </p>
                 </div>
-                <div class="service-block linear-block">
+                <div class="service-block linear-block" data-aos="fade-right" data-aos-duration="1000">
                     <img src="imgs/صفحة التصميم والحملات الاعلانية/أيقونات سكشن الحملات الاعلانية/أيقونة رقم4.svg"
                         class="img-fluid" alt="icon">
                     <p class="our-service-title">
@@ -308,14 +309,14 @@
                         والاهتمامات ومستوى الدخل.
                     </p>
                 </div>
-                <div class="service-block linear-block">
+                <div class="service-block linear-block" data-aos="fade-up-left" data-aos-duration="1000">
                     <img src="imgs/صفحة التصميم والحملات الاعلانية/أيقونات سكشن الحملات الاعلانية/أيقونة رقم5.svg"
                         class="img-fluid" alt="icon">
                     <p class="our-service-title">
                         اختيار الكلمات المفتاحية المستهدفة.
                     </p>
                 </div>
-                <div class="service-block linear-block">
+                <div class="service-block linear-block" data-aos="fade-up-right" data-aos-duration="1000">
                     <img src="imgs/صفحة التصميم والحملات الاعلانية/أيقونات سكشن الحملات الاعلانية/أيقونة رقم6.svg"
                         class="img-fluid" alt="icon">
                     <p class="our-service-title">
@@ -323,7 +324,7 @@
                     </p>
                 </div>
             </div>
-            <a href="tel:+966023114564" class="call-us">
+            <a href="tel:+966023114564" class="call-us" data-aos="fade-up" data-aos-duration="1000">
                 <span>اتصل بنا</span>
             </a>
         </div>
@@ -428,6 +429,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/main.js"></script>
 </body>
 
