--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <link rel="shortcut icon" type="image/jpg" href="imgs/fivicon.png">
     <title>سلسلة - المدوّنة</title>
@@ -187,7 +188,7 @@
 
     <section id="our-gallery">
         <div class="container">
-            <div class="filter-text">
+            <div class="filter-text" data-aos="fade-down" data-aos-duration="1000">
                 <span class="active">تسويق</span>
                 <span>تصميم</span>
                 <span>محاسبة</span>
@@ -196,13 +197,13 @@
                 <span>منوع</span>
                 <span>أخبار</span>
             </div>
-            <div class="search">
+            <div class="search" data-aos="fade-down" data-aos-duration="1000">
                 <input type="text" placeholder="البحث" class="form-control">
                 <button>ابحث</button>
             </div>
             <div class="main-block">
                 <div class="block">
-                    <a href="blog-info.html">
+                    <a href="blog-info.html" data-aos="fade-up-left" data-aos-duration="1000">
                         <div class="top d-flex align-items-end one">
                             <button>تحليل</button>
                             <button>تسويق</button>
@@ -217,7 +218,7 @@
                     </a>
                 </div>
                 <div class="block">
-                    <a href="blog-info.html">
+                    <a href="blog-info.html" data-aos="fade-up-right" data-aos-duration="1000">
                         <div class="top d-flex align-items-end two">
                             <button>تحليل</button>
                             <button>تسويق</button>
@@ -232,7 +233,7 @@
                     </a>
                 </div>
                 <div class="block">
-                    <a href="blog-info.html">
+                    <a href="blog-info.html" data-aos="fade-up-left" data-aos-duration="1000">
                         <div class="top d-flex align-items-end three">
                             <button>تحليل</button>
                             <button>تسويق</button>
@@ -247,7 +248,7 @@
                     </a>
                 </div>
                 <div class="block">
-                    <a href="blog-info.html">
+                    <a href="blog-info.html" data-aos="fade-up-right" data-aos-duration="1000">
                         <div class="top d-flex align-items-end four">
                             <button>تحليل</button>
                             <button>تسويق</button>
@@ -262,7 +263,7 @@
                     </a>
                 </div>
                 <div class="block">
-                    <a href="blog-info.html">
+                    <a href="blog-info.html" data-aos="fade-up-left" data-aos-duration="1000">
                         <div class="top d-flex align-items-end five">
                             <button>تحليل</button>
                             <button>تسويق</button>
@@ -277,7 +278,7 @@
                     </a>
                 </div>
                 <div class="block">
-                    <a href="blog-info.html">
+                    <a href="blog-info.html" data-aos="fade-up-right" data-aos-duration="1000">
                         <div class="top d-flex align-items-end six">
                             <button>تحليل</button>
                             <button>تسويق</button>
@@ -292,7 +293,7 @@
                     </a>
                 </div>
                 <div class="block">
-                    <a href="blog-info.html">
+                    <a href="blog-info.html" data-aos="fade-up-left" data-aos-duration="1000">
                         <div class="top d-flex align-items-end seven">
                             <button>تحليل</button>
                             <button>تسويق</button>
@@ -307,7 +308,7 @@
                     </a>
                 </div>
                 <div class="block">
-                    <a href="blog-info.html">
+                    <a href="blog-info.html" data-aos="fade-up-right" data-aos-duration="1000">
                         <div class="top d-flex align-items-end eight">
                             <button>تحليل</button>
                             <button>تسويق</button>
@@ -322,7 +323,7 @@
                     </a>
                 </div>
                 <div class="block">
-                    <a href="blog-info.html">
+                    <a href="blog-info.html" data-aos="fade-up-left" data-aos-duration="1000">
                         <div class="top d-flex align-items-end nine">
                             <button>تحليل</button>
                             <button>تسويق</button>
@@ -337,7 +338,7 @@
                     </a>
                 </div>
                 <div class="block">
-                    <a href="blog-info.html">
+                    <a href="blog-info.html" data-aos="fade-up-right" data-aos-duration="1000">
                         <div class="top d-flex align-items-end ten">
                             <button>تحليل</button>
                             <button>تسويق</button>
@@ -354,9 +355,9 @@
             </div>
             <div class="text-center"><button class="read-more">اقرأ المزيد</button></div>
             <div class="search-2">
-                <h5>انـضـم لـنـشـرتـنـا الـبـريـديـة</h5>
-                <p>مقالات غنية بالمعلومات المفيدة</p>
-                <div>
+                <h5 data-aos="fade-down" data-aos-duration="1000">انـضـم لـنـشـرتـنـا الـبـريـديـة</h5>
+                <p data-aos="fade-down" data-aos-duration="1000">مقالات غنية بالمعلومات المفيدة</p>
+                <div data-aos="fade-down" data-aos-duration="1000">
                     <input type="text" placeholder="البريد الالكتروني" class="form-control">
                     <button>سجل الآن</button>
                 </div>
@@ -464,6 +465,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/main.js"></script>
 
 </body>
