--- a/financial consulting.html
+++ b/financial consulting.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <link rel="shortcut icon" type="image/jpg" href="imgs/fivicon.png">
     <title>سلسلة - الاستشارات والحلول الإدارية و المالية</title>
@@ -188,49 +189,46 @@
     <section id="more-about-us">
         <div class="container">
             <div class="more-about-us-block">
-                <p class="mb-5 mb-lg-0">
+                <p class="mb-5 mb-lg-0" data-aos="fade-left" data-aos-duration="1000">
                     نحن في مكتب سلسلة للاستشارات نقدم مجموعة واسعة من الاستشارات والحلول الإدارية والمالية للشركات
                     وروَاد الأعمال وأصحاب
                     المشاريع والمنشآت في المملكة العربية السعودية. نحن نسعى جاهدين لتحسين أداء الشركات وتطوير
                     استراتيجيات النجاح.
                 </p>
                 <img src="imgs/صفحة الاستشارات والحلول الادارية والمالية/صورة رقم1.svg"
-                    class="img-fluid avatar service-img-1" alt="img">
+                    class="img-fluid avatar service-img-1" alt="img" data-aos="fade-right" data-aos-duration="1000">
             </div>
         </div>
     </section>
 
     <section id="our-services">
         <div class="container">
-            <h3>تتضمن خدماتنا:</h3>
+            <h3 data-aos="fade-down" data-aos-duration="1000">تتضمن خدماتنا:</h3>
             <div class="main-our-services">
-                <div class="service-block">
+                <div class="service-block" data-aos="fade-down-left" data-aos-duration="1000">
                     <img src="imgs/صفحة الاستشارات والحلول الادارية والمالية/أيقونات/أيقونة رقم1.svg" class="img-fluid"
                         alt="icon">
                     <p>إعداد دراسات الجدوى الاقتصادية وفق المعايير المعتمدة</p>
                 </div>
-
-                <div class="service-block">
+                <div class="service-block" data-aos="fade-down-right" data-aos-duration="1000">
                     <img src="imgs/صفحة الاستشارات والحلول الادارية والمالية/أيقونات/أيقونة رقم2.svg" class="img-fluid"
                         alt="icon">
                     <p>المشورة في التخطيط الإداري والمالي</p>
                 </div>
-
-                <div class="service-block">
+                <div class="service-block" data-aos="fade-up-left" data-aos-duration="1000">
                     <img src="imgs/صفحة الاستشارات والحلول الادارية والمالية/أيقونات/أيقونة رقم3.svg" class="img-fluid"
                         alt="icon">
                     <p>وضع السياسات والإجراءات المالية
                         والمحاسبية.</p>
                 </div>
-
-                <div class="service-block">
+                <div class="service-block" data-aos="fade-up-right" data-aos-duration="1000">
                     <img src="imgs/صفحة الاستشارات والحلول الادارية والمالية/أيقونات/أيقونة رقم4.svg" class="img-fluid"
                         alt="icon">
                     <p>تصميم وتطبيق الأنظمة المالية
                         والمحاسبية</p>
                 </div>
             </div>
-            <div class="service-block last-service-block">
+            <div class="service-block last-service-block" data-aos="fade-up" data-aos-duration="1000">
                 <img src="imgs/صفحة الاستشارات والحلول الادارية والمالية/أيقونات/أيقونة رقم5.svg" class="img-fluid"
                     alt="icon">
                 <p>التدقيق والمراجعة المالية</p>
@@ -241,10 +239,10 @@
     <section id="our-importent">
         <div class="container">
             <div class="our-importent-row">
-                <figure class="col-lg-6 col-12">
+                <figure class="col-lg-6 col-12" data-aos="fade-left" data-aos-duration="1000">
                     <img src="imgs/صفحة الاستشارات والحلول الادارية والمالية/صورة رقم2.svg" class="img-fluid" alt="img">
                 </figure>
-                <div class="our-importent-content col-lg-6 col-12">
+                <div class="our-importent-content col-lg-6 col-12" data-aos="fade-right" data-aos-duration="1000">
                     <h4>نهتم بتقديم حلول مبتكرة ومتكاملة</h4>
                     <p>تلبي احتياجات شركتك وتساهم في تحقيق الشفافية والتحكم المالي. نحن نعتمد على المعايير الدولية ونقدم
                         استشارات متخصصة لتحسين
@@ -258,8 +256,9 @@
         <div class="container">
             <div class="row">
                 <div>
-                    <h3>في مكتب سلسلة للاستشارات</h3>
-                    <p>نحرص على تحقيق أفضل النتائج لعملائنا من خلال الاستفادة من البيانات والتحليلات لتحسين الأداء
+                    <h3 data-aos="fade-down" data-aos-duration="1000">في مكتب سلسلة للاستشارات</h3>
+                    <p data-aos="fade-up" data-aos-duration="1000">نحرص على تحقيق أفضل النتائج لعملائنا من خلال
+                        الاستفادة من البيانات والتحليلات لتحسين الأداء
                         وتحقيق عائد استثمار إيجابي. <br class="d-none d-lg-block">
                         نعمل بروح الفريق ونولي أهمية كبيرة للتواصل الفعال والتعاون مع عملائنا.</p>
                 </div>
@@ -270,12 +269,12 @@
     <section id="cta-2">
         <div class="container">
             <div class="text-center">
-                <p>
+                <p data-aos="fade-down" data-aos-duration="1000">
                     إذا كنت تبحث عن استشارات إدارية ومالية متخصصة في المملكة العربية السعودية، فنحن في مكتب سلسلة
                     للاستشارات هنا لمساعدتك في
                     تحقيق أهدافك ونجاحك المستقبلي. اتصل بنا اليوم لمناقشة احتياجاتك وبدء رحلة التطوير والنمو معنا.
                 </p>
-                <a href="tel:+966023114564" class="call-us">
+                <a href="tel:+966023114564" class="call-us" data-aos="fade-up" data-aos-duration="1000">
                     <span>اتصل بنا</span>
                 </a>
             </div>
@@ -382,6 +381,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/main.js"></script>
 </body>
 
