--- a/gallery.html
+++ b/gallery.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <link rel="shortcut icon" type="image/jpg" href="imgs/fivicon.png">
     <title>سلسلة - معرض الأعمال</title>
@@ -187,7 +188,7 @@
 
     <section id="our-gallery">
         <div class="container">
-            <div class="filter-text">
+            <div class="filter-text" data-aos="fade-down" data-aos-duration="1000">
                 <span class="active">تسويق</span>
                 <span>تصميم</span>
                 <span>محاسبة</span>
@@ -197,7 +198,7 @@
                 <span>أخبار</span>
             </div>
             <div class="main-block-gallery">
-                <a href="info-gallery.html" class="gallery-block">
+                <a href="info-gallery.html" class="gallery-block" data-aos="fade-left" data-aos-duration="1000">
                     <figure>
                         <img src="imgs/gallery-1.webp" class="img-fluid" alt="gallery">
                     </figure>
@@ -209,7 +210,7 @@
                             الدورية.</p>
                     </div>
                 </a>
-                <a href="info-gallery.html" class="gallery-block">
+                <a href="info-gallery.html" class="gallery-block" data-aos="fade-right" data-aos-duration="1000">
                     <figure class="d-lg-block d-none">
                         <img src="imgs/gallery-1.webp" class="img-fluid" alt="gallery">
                     </figure>
@@ -222,7 +223,7 @@
                             الدورية.</p>
                     </div>
                 </a>
-                <a href="info-gallery.html" class="gallery-block">
+                <a href="info-gallery.html" class="gallery-block" data-aos="fade-left" data-aos-duration="1000">
                     <figure>
                         <img src="imgs/gallery-1.webp" class="img-fluid" alt="gallery">
                     </figure>
@@ -338,6 +339,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/main.js"></script>
 
 </body>
