--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="shortcut icon" type="image/png" href="imgs/fivicon.png">
     <link rel="stylesheet" href="css/main.css">
     <title>سلسلة - الصفحة الرئيسية</title>
@@ -208,8 +209,8 @@
 
     <section id="video">
         <div class="container">
-            <div class="row mx-auto col-md-8">
-                <h3 class="headline load-hidden">تعرف على <span class="main-color">سلسلة</span> بفيديو</h3>
+            <div class="row mx-auto col-md-8" data-aos="fade-down" data-aos-duration="1000">
+                <h3 class=" headline load-hidden">تعرف على <span class="main-color">سلسلة</span> بفيديو</h3>
                 <p class="headline">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vestibulum lectus vitae justo
                     tristique,
@@ -329,15 +330,16 @@
     <section id="services">
         <div class="container">
             <div class="header-content">
-                <h3>الخدمات</h3>
-                <p>بفضل خبرتنا الواسعة والمتنوعة، نقدم مجموعة متنوعة من الخدمات التي تلبي <br class="d-none d-lg-block">
+                <h3 data-aos="fade-up">الخدمات</h3>
+                <p data-aos="fade-up">بفضل خبرتنا الواسعة والمتنوعة، نقدم مجموعة متنوعة من الخدمات التي تلبي <br
+                        class="d-none d-lg-block">
                     احتياجاتك بكفاءة
                     واحترافية.
                 </p>
             </div>
             <div class="row gy-4">
                 <div class="col-lg-4 col-md-6 col-12">
-                    <div class="service-block text-center">
+                    <div class="service-block text-center" data-aos="fade-down-left" data-aos-duration="1000">
                         <div class="img">
                             <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg"
                                 xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 50 50">
@@ -411,7 +413,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
-                    <div class="service-block text-center">
+                    <div class="service-block text-center" data-aos="fade-down" data-aos-duration="1000">
                         <div class="img">
                             <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg"
                                 xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 50 50">
@@ -469,7 +471,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
-                    <div class="service-block text-center">
+                    <div class="service-block text-center" data-aos="fade-down-right" data-aos-duration="1000">
                         <div class="img">
                             <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg"
                                 xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 50 50">
@@ -559,7 +561,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
-                    <div class="service-block text-center">
+                    <div class="service-block text-center" data-aos="fade-down-left" data-aos-duration="1000">
                         <div class="img">
                             <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg"
                                 xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 50 50">
@@ -641,7 +643,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
-                    <div class="service-block text-center">
+                    <div class="service-block text-center" data-aos="fade-down" data-aos-duration="1000">
                         <div class="img">
                             <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg"
                                 viewBox="0 0 50 50">
@@ -680,7 +682,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
-                    <div class="service-block text-center">
+                    <div class="service-block text-center" data-aos="fade-down-right" data-aos-duration="1000">
                         <div class="img">
                             <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg"
                                 xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 50 50">
@@ -1273,7 +1275,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
-                    <div class="service-block text-center">
+                    <div class="service-block text-center" data-aos="fade-down-left" data-aos-duration="1000">
                         <div class="img">
                             <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg"
                                 xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 50 50">
@@ -1383,7 +1385,7 @@
 
     <section id="testimonial">
         <div class="container">
-            <h3>تعرف على خبراء <span class="main-color">سلسلة</span></h3>
+            <h3 data-aos="fade-up" data-aos-duration="1000">تعرف على خبراء <span class="main-color">سلسلة</span></h3>
             <div class="swiper mySwiper-4">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
@@ -1627,17 +1629,17 @@
 
     <section id="planning">
         <div class="container">
-            <h3 class="mb-5">منصة سلسلة لتخطيط الأعمال</h3>
+            <h3 class="mb-5" data-aos="fade-up" data-aos-duration="1000">منصة سلسلة لتخطيط الأعمال</h3>
             <div class="up">
                 <div class="imgs-container">
                     <div class="container-layer">
-                        <img src="imgs/planning.webp">
-                        <img src="imgs/planning.webp">
-                        <img src="imgs/planning.webp">
-                        <img src="imgs/planning.webp">
+                        <img class="img img-1" src="imgs/planning.webp" data-aos="fade-left" data-aos-duration="500">
+                        <img class="img img-2" src="imgs/planning.webp" data-aos="fade-left" data-aos-duration="1000">
+                        <img class="img img-3" src="imgs/planning.webp" data-aos="fade-left" data-aos-duration="1500">
+                        <img class="img img-4" src="imgs/planning.webp" data-aos="fade-left" data-aos-duration="2000">
                     </div>
                 </div>
-                <div class="planning-content">
+                <div class="planning-content" data-aos="fade-right" data-aos-duration="1000">
                     <p>كل ما تحتاجه لإنجاز وتخطيط أعمالك في منصة واحدة فقط، سارع وسجل في المنصة الآن لتحصل على كافة
                         المميزات المتاحة داخل
                         المنصة</p>
@@ -1648,10 +1650,11 @@
     </section>
     <section id="portfolio">
         <div class="container">
-            <h3>تعرف على معرض أعمال <span class="main-color">سلسلة</span></h3>
+            <h3 data-aos="fade-down" data-aos-duration="1000">تعرف على معرض أعمال <span class="main-color">سلسلة</span>
+            </h3>
             <div class="row gap-0">
                 <div class="col-lg-4 col-md-6 col-12 ">
-                    <figure>
+                    <figure data-aos="fade-left" data-aos-duration="1000">
                         <img src="imgs/portfolio/portfolio-1.webp" alt="portfolio-1" class="img-fluid">
                         <div class="content-layer">
                             <h5 class="title">شركة الغامدي للمقاولات</h5>
@@ -1660,7 +1663,7 @@
                                 الدورية.</p>
                         </div>
                     </figure>
-                    <figure>
+                    <figure data-aos="fade-left" data-aos-duration="1000">
                         <img src="imgs/portfolio/portfolio-2.webp" alt="portfolio-2" class="img-fluid">
                         <div class="content-layer">
                             <h5 class="title">شركة الغامدي للمقاولات</h5>
@@ -1671,7 +1674,7 @@
                     </figure>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
-                    <figure>
+                    <figure data-aos="fade-down" data-aos-duration="1000">
                         <img src="imgs/portfolio/portfolio-3.webp" alt="portfolio-3" class="img-fluid">
                         <div class="content-layer">
                             <h5 class="title">شركة الغامدي للمقاولات</h5>
@@ -1680,7 +1683,7 @@
                                 الدورية.</p>
                         </div>
                     </figure>
-                    <figure>
+                    <figure data-aos="fade-up" data-aos-duration="1000">
                         <img src="imgs/portfolio/portfolio-4.webp" alt="portfolio-4" class="img-fluid">
                         <div class="content-layer">
                             <h5 class="title">شركة الغامدي للمقاولات</h5>
@@ -1691,7 +1694,7 @@
                     </figure>
                 </div>
                 <div class="col-lg-4 col-12">
-                    <figure>
+                    <figure data-aos="fade-right" data-aos-duration="1000">
                         <img src="imgs/portfolio/portfolio-5.webp" alt="portfolio-5" class="img-fluid">
                         <div class="content-layer">
                             <h5 class="title">شركة الغامدي للمقاولات</h5>
@@ -1708,7 +1711,7 @@
     </section>
     <section id="carousel">
         <div class="container">
-            <h3>بكل فخر عملاء <span class="main-color">سلسلة</span></h3>
+            <h3 data-aos="fade-down" data-aos-duration="1000">بكل فخر عملاء <span class="main-color">سلسلة</span></h3>
             <div class="swiper mySwiper-2">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
@@ -1739,7 +1742,7 @@
 
     <section id="other-testimonial">
         <div class="container">
-            <h3>آراء عملائنا</h3>
+            <h3 data-aos="fade-down" data-aos-duration="1000">آراء عملائنا</h3>
             <div class="testimonial mySwiper-3">
                 <div class="testi-content swiper-wrapper">
                     <div class="slide swiper-slide">
@@ -1801,9 +1804,9 @@
 
     <section id="last-blog">
         <div class="container">
-            <h3>آخر المقالات</h3>
+            <h3 data-aos="fade-down" data-aos-duration="1000">آخر المقالات</h3>
             <div class="row align-items-center justify-content-center gy-4">
-                <div class="col-lg-6 col-12">
+                <div class="col-lg-6 col-12" data-aos="fade-left" data-aos-duration="1000">
                     <div class="last-blog-block">
                         <h4>انـضـم لـنـشـرتـنـا الـبـريـديـة</h4>
                         <p>مقالات غنية بالمعلومات المفيدة</p>
@@ -1813,7 +1816,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-12">
+                <div class="col-lg-6 col-12" data-aos="fade-right" data-aos-duration="1000">
                     <div class="top position-relative">
                         <div>
                             <button>تحليل</button>
@@ -1931,7 +1934,7 @@
             <div class="modal-content">
                 <div class="modal-header d-flex flex-column justify-content-center">
                     <h1 class="modal-title fs-5" id="exampleModalLabel">احجز استشارّة</h1>
-                    <p>استشارة مجانية لمدة 30 دقيقة</p>
+                    <p>استشارّة مجانية لمدة 30 دقيقة</p>
                 </div>
                 <div class="modal-body">
                     <form class="row needs-validation" novalidate style="width: 100%; margin: auto;">
@@ -2026,7 +2029,7 @@
                                 ممتاز
                             </div>
                             <div class="invalid-feedback mt-2">
-                                الرجاء إدخال رقم جوال صالح
+                                الرجاء إدخال رقم جوال
                             </div>
                         </div>
                         <div class="col-12">
@@ -2113,9 +2116,8 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
     <script src="js/main.js"></script>
 
 </body>
