--- a/legal advice.html
+++ b/legal advice.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <link rel="shortcut icon" type="image/jpg" href="imgs/fivicon.png">
     <title>سلسلة - الاستشارات والحلول القانونية</title>
@@ -188,7 +189,7 @@
     <section id="another-cta" class="another-cta">
         <div class="container">
             <div class="row align-items-center text-center">
-                <div>
+                <div data-aos="fade-down" data-aos-duration="1000">
                     <h4 class="text-center another-cta-text">هل تبحث عن استشارات وحلول قانونية موثوقة؟</h4>
                     <p class="another-cta-text">
                         نحن هنا لمساعدتك في جميع الأمور القانونية المتعلقة بتأسيس وإدارة شركتك في المملكة العربية
@@ -202,10 +203,10 @@
     <section id="more-info" class="p-0">
         <div class="container">
             <div class="d-flex flex-column gap-0 gap-lg-5 flex-lg-row align-items-center justify-content-between">
-                <figure class="w-100">
+                <figure class="w-100" data-aos="fade-left" data-aos-duration="1000">
                     <img src="imgs/صفحة الاستشارات القانونية/صورة رقم1.svg" class="img-fluid" alt="img">
                 </figure>
-                <div>
+                <div data-aos="fade-right" data-aos-duration="1000">
                     <p class="p">نقدم خدمات استشارية شاملة تشمل اختيار الشكل القانوني المناسب لشركتك، إعداد اللوائح
                         الداخلية وعقود
                         التأسيس، والمساعدة في
@@ -218,10 +219,10 @@
     <section id="more-info" class="more-info-2 bg-none">
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
-                <figure class="d-lg-none d-block w-100">
+                <figure class="d-lg-none d-block w-100" data-aos="fade-down" data-aos-duration="1000">
                     <img src="imgs/صفحة الاستشارات القانونية/صورة رقم2.svg" class="img-fluid" alt="img">
                 </figure>
-                <div>
+                <div data-aos="fade-left" data-aos-duration="1000">
                     <p class="p">
                         نقدم أيضاً المشورة فيما يتعلق بحماية حقوق الملكية الفكرية والابتكار، ومراجعة العقود والاتفاقيات
                         لضمان الامتثال القانوني
@@ -229,20 +230,20 @@
                         اندماج واستحواذ. 
                     </p>
                 </div>
-                <figure class="d-none d-lg-block">
+                <figure class="d-none d-lg-block" data-aos="fade-right" data-aos-duration="1000">
                     <img src="imgs/صفحة الاستشارات القانونية/صورة رقم2.svg" class="img-fluid" alt="img">
                 </figure>
             </div>
         </div>
     </section>
 
-    <section id="more-info" class="more-info-3 pt-md-0">
+    <section id="more-info" class="more-info-3 aaa pt-md-0">
         <div class="container">
             <div class="d-flex gap-0 gap-lg-5 flex-column flex-lg-row align-items-center justify-content-between">
-                <figure class="w-100">
+                <figure class="w-100" data-aos="fade-left" data-aos-duration="1000">
                     <img src="imgs/صفحة الاستشارات القانونية/صورة رقم3.png" class="img-fluid w-100" alt="img">
                 </figure>
-                <div>
+                <div data-aos="fade-right" data-aos-duration="1000">
                     <p class="p">
                         اعتمد على خبرتنا في تقديم المشورة القانونية لمجلس الإدارة وتحديث اللوائح الداخلية بانتظام للتأكد
                         من التوافق مع التطورات
@@ -256,17 +257,17 @@
     <section id="more-info" class="more-info-2">
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
-                <figure class="d-lg-none d-block">
+                <figure class="d-lg-none d-block" data-aos="fade-down" data-aos-duration="1000">
                     <img src="imgs/صفحة الاستشارات القانونية/صورة رقم4.svg" class="img-fluid" alt="img">
                 </figure>
                 <div>
-                    <p class="p">
+                    <p class="p" data-aos="fade-left" data-aos-duration="1000">
                         إذا كنت تدير متجرًا إلكترونيًا، سلسلة موجودة لمساعدتك في صياغة العقود واللوائح، والتسجيل
                         والترخيص، وصياغة سياسات
                         الخصوصية والشروط والأحكام والاسترجاع والاستبدال.
                     </p>
                 </div>
-                <figure class="d-lg-block d-none">
+                <figure class="d-lg-block d-none" data-aos="fade-right" data-aos-duration="1000">
                     <img src="imgs/صفحة الاستشارات القانونية/صورة رقم4.svg" class="img-fluid" alt="img">
                 </figure>
             </div>
@@ -276,11 +277,11 @@
     <section id="cta-2">
         <div class="container">
             <div class="text-center">
-                <p>
+                <p data-aos="fade-down" data-aos-duration="1000">
                     اتصل بنا الآن واستفد من خبرتنا في مجال قانون الشركات <br class="d-none d-lg-block">
                     نحن هنا لمساعدتك في تحقيق أهدافك القانونية ونمو شركتك.
                 </p>
-                <a href="tel:+966023114564" class="call-us">
+                <a href="tel:+966023114564" class="call-us" data-aos="fade-up" data-aos-duration="1000">
                     <span>اتصل بنا</span>
                 </a>
             </div>
@@ -386,6 +387,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/main.js"></script>
 </body>
 
