--- a/marketing consulting.html
+++ b/marketing consulting.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="shortcut icon" type="image/jpg" href="imgs/fivicon.png">
     <title>سلسلة - الاستشارات والحلول التسويقية</title>
 </head>
@@ -59,9 +60,9 @@
                         aria-label="Toggle navigation">
                         <span class="fa fa-bars"></span>
                     </button>
-                        <a class="navbar-brand d-block d-lg-none" href="index.html">
-                            <img src="./imgs/logo.png" alt="logo">
-                        </a>
+                    <a class="navbar-brand d-block d-lg-none" href="index.html">
+                        <img src="./imgs/logo.png" alt="logo">
+                    </a>
                     <a class="nav-link d-none d-lg-block" href="index.html#testimonial">
                         <button class="ask-request">اطلب استشارّة</button>
                     </a>
@@ -188,10 +189,10 @@
     <section id="more-info" class="marketing-consulting">
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
-                <figure>
+                <figure data-aos="fade-left" data-aos-duration="1000">
                     <img src="imgs/صفحة الاستشارات والحلول التسويقية/صورة رقم1.svg" class="img-fluid" alt="img">
                 </figure>
-                <div>
+                <div data-aos="fade-right" data-aos-duration="1000">
                     <p class="p">
                         انطلاقاً من أهمية التسويق ودوره الفاعل في نجاح العمل تحرص سلسلة من خلال خبرائها المختصين على
                         تقديم استشارات تسويقية
@@ -207,10 +208,10 @@
     <section id="more-info" class="more-info-3 marketing-consulting-2">
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
-                <figure class="d-lg-none d-block">
+                <figure class="d-lg-none d-block" data-aos="fade-down" data-aos-duration="1000">
                     <img src="imgs/صفحة الاستشارات والحلول التسويقية/صورة رقم2.svg" class="img-fluid" alt="img">
                 </figure>
-                <div>
+                <div data-aos="fade-left" data-aos-duration="1000">
                     <p class="p">
                         نحن نقدم أيضًا خدمات إدارة الهوية الرقمية وتطوير العلامة التجارية الرقمية والبصرية. نعمل على
                         بناء هوية قوية لعلامتك
@@ -219,7 +220,7 @@
                         نقوم بتحليل السوق المستهدف ومنافسيك وسلوك المستهلك لتوفير استراتيجيات تسويقية فعالة.
                     </p>
                 </div>
-                <figure class="d-lg-block d-none">
+                <figure class="d-lg-block d-none" data-aos="fade-right" data-aos-duration="1000">
                     <img src="imgs/صفحة الاستشارات والحلول التسويقية/صورة رقم2.svg" class="img-fluid" alt="img">
                 </figure>
             </div>
@@ -229,16 +230,17 @@
     <section id="more-info" class="marketing-consulting-3">
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
-                <figure>
+                <figure data-aos="fade-left" data-aos-duration="1000">
                     <img src="imgs/صفحة الاستشارات والحلول التسويقية/صورة رقم3.svg" class="img-fluid" alt="img">
                 </figure>
                 <div>
-                    <p class="p">
+                    <p class="p" data-aos="fade-right" data-aos-duration="1000">
                         سواء كنت تحتاج إلى استشارات في مجال التسويق الرقمي، أو تطوير العلامة التجارية، أو تصميم حملات
                         إعلانية مبتكرة، فإننا هنا
                         لمساعدتك في تحقيق أهدافك ونجاحك الرقمي.
                     </p>
-                    <p class="p">سنعمل معًا على تحقيق نتائج ملموسة وزيادة رؤية علامتك التجارية على الإنترنت. ونشر
+                    <p class="p" data-aos="fade-right" data-aos-duration="1500">سنعمل معًا على تحقيق نتائج ملموسة وزيادة
+                        رؤية علامتك التجارية على الإنترنت. ونشر
                         المحتوى المناسب
                         على موقعك الإلكتروني
                         وتحسينه لتحقيق أفضل نتائج في محركات البحث.</p>
@@ -250,12 +252,12 @@
     <section id="cta-2">
         <div class="container">
             <div class="text-center">
-                <p>
+                <p data-aos="fade-down" data-aos-duration="1000">
                     في مكتب سلسلة للاستشارات، نحن ملتزمون بتقديم خدمات عالية الجودة وتحقيق نتائج قابلة للقياس. اتصل بنا
                     اليوم للحصول على
                     خدماتنا التسويقية والإبداعية<br class="d-none d-lg-block"> وبدء رحلة النجاح الرقمي. 
                 </p>
-                <a href="tel:+966023114564" class="call-us">
+                <a href="tel:+966023114564" class="call-us" data-aos="fade-down" data-aos-duration="1000">
                     <span>اتصل بنا</span>
                 </a>
             </div>
@@ -362,6 +364,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/main.js"></script>
 </body>
 
