--- a/contact-us.html
+++ b/contact-us.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <link rel="shortcut icon" type="image/jpg" href="imgs/fivicon.png">
     <title>سلسلة - اتصل بنا</title>
@@ -189,11 +190,12 @@
             <div class="row align-items-center g-0 g-md-5">
                 <div class="col-lg-6 col-12">
                     <div class="contact-us-block">
-                        <h3>اتصل بنا</h3>
-                        <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى
+                        <h3 data-aos="fade-down" data-aos-duration="1000">اتصل بنا</h3>
+                        <p data-aos="fade-down" data-aos-duration="1000">هذا النص هو مثال لنص يمكن أن يستبدل في نفس
+                            المساحة، لقد تم توليد هذا النص من مولد النص العربى
                         </p>
                         <form class="row needs-validation" novalidate>
-                            <div class="col-12 position-relative">
+                            <div class="col-12 position-relative" data-aos="fade-down" data-aos-duration="1000">
                                 <input type="text" class="form-control" id="validationCustom01" value=""
                                     placeholder="الاسم" required>
                                 <span class="red-star-1">*</span>
@@ -202,7 +204,7 @@
                                 </div>
                                 <div class="invalid-feedback mt-2">الرجاء إدخال أسم</div>
                             </div>
-                            <div class="col-12 position-relative">
+                            <div class="col-12 position-relative" data-aos="fade-down" data-aos-duration="1000">
                                 <input type="email" class="form-control" id="validationCustom01" value=""
                                     placeholder="البريد الالكتروني" required>
                                 <span class="red-star-2">*</span>
@@ -213,7 +215,7 @@
                                     الرجاء إدخال البريد الالكتروني
                                 </div>
                             </div>
-                            <div class="col-12 position-relative">
+                            <div class="col-12 position-relative" data-aos="fade-down" data-aos-duration="1000">
                                 <input type="number" class="form-control" id="validationCustom01" value=""
                                     placeholder="رقم الجوال" required>
                                 <span class="red-star-3">*</span>
@@ -224,7 +226,7 @@
                                     الرجاء إدخال رقم جوال صالح
                                 </div>
                             </div>
-                            <div class="col-12 position-relative">
+                            <div class="col-12 position-relative" data-aos="fade-down" data-aos-duration="1000">
                                 <textarea type="text" class="form-control" id="validationCustom01" value=""
                                     placeholder="الشرح" required></textarea>
                                 <span class="red-star-4">*</span>
@@ -235,12 +237,12 @@
                                     الرجاء إدخال نبذة عن الاستشارة المطلوبة
                                 </div>
                             </div>
-                            <div class="col-12">
+                            <div class="col-12" data-aos="fade-down" data-aos-duration="1000">
                                 <input value="ارسال" type="submit" class="form-control">
                             </div>
                         </form>
                         <div class="d-flex gap-5 flex-wrap">
-                            <div>
+                            <div data-aos="fade-down" data-aos-duration="1000">
                                 <a href="mailto:contact@slsalah.com" class="d-flex align-items-center">
                                     <img src="imgs/icons/mail-dark.svg" alt="mail-icon" class="img-fluid">
                                     <div class="d-flex flex-column">
@@ -249,7 +251,7 @@
                                     </div>
                                 </a>
                             </div>
-                            <div>
+                            <div data-aos="fade-down" data-aos-duration="1000">
                                 <a href="tel:+966555881764" class="d-flex align-items-center">
                                     <img src="imgs/icons/phone-dark.svg" alt="phone-icon" class="img-fluid">
                                     <div class="d-flex flex-column">
@@ -262,7 +264,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 col-12">
-                    <iframe
+                    <iframe data-aos="fade-right" data-aos-duration="1000"
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3625.0086842309224!2d46.6332502!3d24.6922282!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e2f1d00bf0a7f2f%3A0x8f3fa3832e3ec787!2z2YTZitiz2YYg2YHYp9mE2Yo!5e0!3m2!1sar!2ssa!4v1696821324682!5m2!1sar!2ssa"
                         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -371,6 +373,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/main.js"></script>
 
 </body>
