--- a/human consulting.html
+++ b/human consulting.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="shortcut icon" type="image/jpg" href="imgs/fivicon.png">
     <title>سلسلة - استشارات الموارد البشرية</title>
 </head>
@@ -189,7 +190,7 @@
         <div class="container">
             <div class="row align-items-center text-center">
                 <div>
-                    <p class="another-cta-text">
+                    <p class="another-cta-text" data-aos="fade-down" data-aos-duration="1000">
                         نحن في مكتب سلسلة للاستشارات نقدم مجموعة واسعة من الخدمات<br class="d-none d-lg-block">
                         الاستشارية للموارد البشرية وتطوير
                         التنظيم لرواد الأعمال
@@ -203,10 +204,10 @@
     <section id="more-info">
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
-                <figure>
+                <figure data-aos="fade-left" data-aos-duration="1000">
                     <img src="imgs/صفحة استشارات الموارد البشرية/صورة رقم1.svg" class="img-fluid" alt="img">
                 </figure>
-                <div>
+                <div data-aos="fade-right" data-aos-duration="1000">
                     <p class="p">
                         تشمل خدماتنا صياغة الخطط الاستراتيجية للموارد البشرية على المدى القصير وصياغة دليل السياسات
                         والإجراءات للموارد البشرية.
@@ -220,10 +221,10 @@
     <section id="more-info" class="more-info-3">
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
-                <figure class="d-lg-none d-block">
+                <figure class="d-lg-none d-block" data-aos="fade-down" data-aos-duration="1000">
                     <img src="imgs/صفحة استشارات الموارد البشرية/صورة رقم2.svg" class="img-fluid" alt="img">
                 </figure>
-                <div>
+                <div data-aos="fade-left" data-aos-duration="1000">
                     <p class="p">
                         بالإضافة إلى ذلك، نقدم المشورة في الهيكل التنظيمي ووظائف الموظفين، والنصائح والتوجيه اللازمين
                         لتحسين تنظيمك الداخلي
@@ -232,7 +233,7 @@
                         المرشحين المناسبين لمنظمتك. سنساعدك في اختيار الكفاءات المناسبة وتعيينهم بشكل فعال.
                     </p>
                 </div>
-                <figure class="d-lg-block d-none">
+                <figure class="d-lg-block d-none" data-aos="fade-right" data-aos-duration="1000">
                     <img src="imgs/صفحة استشارات الموارد البشرية/صورة رقم2.svg" class="img-fluid" alt="img">
                 </figure>
             </div>
@@ -241,29 +242,29 @@
 
     <section id="our-services">
         <div class="container">
-            <h3>تتضمن خدماتنا:</h3>
+            <h3 data-aos="fade-down" data-aos-duration="1000">تتضمن خدماتنا:</h3>
             <div class="main-our-services">
-                <div class="service-block another">
+                <div class="service-block another" data-aos="fade-down-left" data-aos-duration="1000">
                     <img src="imgs/صفحة استشارات الموارد البشرية/ايقونات/أيقونة رقم1.svg" class="img-fluid" alt="icon">
                     <p class="our-service-title">إعداد الموازنة التقديرية لتكلفة التوظيف
                         الجديد ووضع سلم ودليل للرواتب والمزايا.</p>
                 </div>
 
-                <div class="service-block another">
+                <div class="service-block another" data-aos="fade-down-right" data-aos-duration="1000">
                     <img src="imgs/صفحة استشارات الموارد البشرية/ايقونات/أيقونة رقم2.svg" class="img-fluid" alt="icon">
                     <p class="our-service-title">وضع سياسات وبرامج التدريب والتطوير
                         الوظيفي لمساعدتك في تطوير مهارات
                         وقدرات موظفيك.</p>
                 </div>
 
-                <div class="service-block another">
+                <div class="service-block another" data-aos="fade-up-left" data-aos-duration="1000">
                     <img src="imgs/صفحة استشارات الموارد البشرية/ايقونات/أيقونة رقم3.svg" class="img-fluid" alt="icon">
                     <p class="our-service-title">المساعدة في تصميم نظام تقييم الأداء
                         الوظيفي وصياغة مؤشرات قياس الأداء
                         للوظائف الرئيسية.</p>
                 </div>
 
-                <div class="service-block another">
+                <div class="service-block another" data-aos="fade-up-right" data-aos-duration="1000">
                     <img src="imgs/صفحة استشارات الموارد البشرية/ايقونات/أيقونة رقم4.svg" class="img-fluid" alt="icon">
                     <p class="our-service-title">تحديد مكافآت وحوافز الموظفين، حيث سنقدم لك النصائح المناسبة لتحديد
                         مكافآت تحفز الموظفين وتعزز أدائهم.</p>
@@ -275,13 +276,13 @@
     <section id="cta-2">
         <div class="container">
             <div class="text-center">
-                <p>
+                <p data-aos="fade-down" data-aos-duration="1000">
                     نحن ملتزمون بإدارة مخاطر إدارة الموارد البشرية بشكل فعال وتحقيق<br class="d-none d-lg-block"> أقصى
                     استفادة من استثمارك في الموارد
                     البشرية.<br class="d-none d-lg-block">
                     احصل على خدمات استشارية متخصصة في إدارة الموارد البشرية الآن!
                 </p>
-                <a href="tel:+966023114564" class="call-us">
+                <a href="tel:+966023114564" class="call-us" data-aos="fade-down" data-aos-duration="1000">
                     <span>اتصل بنا</span>
                 </a>
             </div>
@@ -387,6 +388,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/main.js"></script>
 </body>
 
