--- a/marketing services.html
+++ b/marketing services.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/swiper-bundle.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="shortcut icon" type="image/jpg" href="imgs/fivicon.png">
@@ -189,10 +190,10 @@
     <section id="more-info" class="marketing-consulting">
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
-                <figure>
+                <figure data-aos="fade-left" data-aos-duration="1000">
                     <img src="imgs/صفحة الخدمات التسويقية/صورة رقم1.svg" class="img-fluid" alt="img">
                 </figure>
-                <div>
+                <div data-aos="fade-right" data-aos-duration="1000">
                     <h3>خدمات الهوية البصرية</h3>
                     <p class="p">
                         نحن في مكتب سلسلة للاستشارات نقدم خدمات الهوية البصرية الإبداعية المتكاملة لمساعدتك في بناء
@@ -201,8 +202,7 @@
                     </p>
                 </div>
             </div>
-
-            <section id="testimonial-2">
+            <div id="testimonial-2">
                 <div class="container">
                     <div class="swiper mySwiper-5">
                         <div class="swiper-wrapper">
@@ -938,14 +938,14 @@
                         <div class="swiper-pagination"></div>
                     </div>
                 </div>
-            </section>
+            </div>
         </div>
     </section>
 
     <section id="more-info" class="marketing-consulting-3">
         <div class="container">
             <div class="mb-5 d-flex flex-column flex-lg-row align-items-center justify-content-between">
-                <div>
+                <div data-aos="fade-left" data-aos-duration="1000">
                     <h3>إدارة محتوى الموقع الالكتروني</h3>
                     <p class="p">
                         في مكتب سلسلة للاستشارات، نقدم مجموعة واسعة من الخدمات التي تتوافق مع تحسين محركات البحث (SEO)
@@ -954,12 +954,12 @@
                         تشمل خدماتنا:
                     </p>
                 </div>
-                <figure>
+                <figure data-aos="fade-right" data-aos-duration="1000">
                     <img src="imgs/صفحة الخدمات التسويقية/صورة رقم2.svg" class="img-fluid" alt="img">
                 </figure>
             </div>
             <div class="row gy-4">
-                <div class="col-lg-6 col-12">
+                <div class="col-lg-6 col-12" data-aos="fade-down-left" data-aos-duration="1000">
                     <div class="marketing-consulting-3-block">
                         <img src="imgs/icons/CMS.png" class="img-fluid" alt="icon">
                         <h4>إدارة محتوى الموقع الإلكتروني:</h4>
@@ -969,7 +969,7 @@
                             يلبي احتياجات<br class="d-none d-lg-block"> وتوقعات جمهورك المستهدف.</p>
                     </div>
                 </div>
-                <div class="col-lg-6 col-12">
+                <div class="col-lg-6 col-12" data-aos="fade-down-right" data-aos-duration="1000">
                     <div class="marketing-consulting-3-block">
                         <img src="imgs/icons/Sync.png" class="img-fluid" alt="icon">
                         <h4>تحديث المعلومات والبيانات</h4>
@@ -979,7 +979,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-lg-6 col-12">
+                <div class="col-lg-6 col-12" data-aos="fade-up-left" data-aos-duration="1000">
                     <div class="marketing-consulting-3-block">
                         <img src="imgs/icons/Video Trimming.png" class="img-fluid" alt="icon">
                         <h4>تصميم وإنتاج المحتوى المرئي والفيديوهات التوضيحية:</h4>
@@ -989,7 +989,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-lg-6 col-12">
+                <div class="col-lg-6 col-12" data-aos="fade-up-right" data-aos-duration="1000">
                     <div class="marketing-consulting-3-block">
                         <img src="imgs/icons/Restart.png" class="img-fluid" alt="icon">
                         <h4>مراجعة دورية للمحتوى</h4>
@@ -1006,7 +1006,7 @@
 
     <section id="testimonial-2" class="manage-social-media">
         <div class="container">
-            <h2>إدارة منصات التواصل الاجتماعي</h2>
+            <h2 data-aos="fade-down" data-aos-duration="1000">إدارة منصات التواصل الاجتماعي</h2>
             <div class="swiper mySwiper-5">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide text-center card-slider">
@@ -2022,22 +2022,22 @@
 
     <section id="marketing-content">
         <div class="container">
-            <h3>كتابة المحتوى التسويقي</h3>
+            <h3 data-aos="fade-down" data-aos-duration="1000">كتابة المحتوى التسويقي</h3>
             <div class="marketing-content-main-block">
-                <div class="marketing-content-block">
+                <div class="marketing-content-block" data-aos="fade-down-left" data-aos-duration="1000">
                     <img src="imgs/صفحة الخدمات التسويقية/ايقونات قسم كتابة المحتوى/كتابة المحتوى التسويقي الهادف.svg"
                         class="img-fluid" alt="icon">
                     <p>كتابة المحتوى التسويقي الهادف لصفحات الموقع الإلكتروني الخاص بك، مع التركيز على جذب الزوار
                         وتحويلهم إلى عملاء محتملين.</p>
                 </div>
-                <div class="marketing-content-block">
+                <div class="marketing-content-block" data-aos="fade-down-right" data-aos-duration="1000">
                     <img src="imgs/صفحة الخدمات التسويقية/ايقونات قسم كتابة المحتوى/كتابة نصوص الاعلانات.svg"
                         class="img-fluid" alt="icon">
                     <p>
                         كتابة نصوص الإعلانات ووصف المنتجات بطريقة جذابة ومقنعة لجذب انتباه العملاء وزيادة مبيعاتك.
                     </p>
                 </div>
-                <div class="marketing-content-block">
+                <div class="marketing-content-block" data-aos="fade-up-left" data-aos-duration="1000">
                     <img src="imgs/صفحة الخدمات التسويقية/ايقونات قسم كتابة المحتوى/اعددا النشرات الاخبارية-01-01.svg"
                         class="img-fluid" alt="icon">
                     <p>
@@ -2045,7 +2045,7 @@
 
                     </p>
                 </div>
-                <div class="marketing-content-block">
+                <div class="marketing-content-block" data-aos="fade-up-right" data-aos-duration="1000">
                     <img src="imgs/صفحة الخدمات التسويقية/ايقونات قسم كتابة المحتوى/مراجعة وتدقيق-02.svg"
                         class="img-fluid" alt="icon">
                     <p>
@@ -2053,7 +2053,7 @@
                     </p>
                 </div>
             </div>
-            <a href="tel:+966023114564" class="call-us">
+            <a href="tel:+966023114564" class="call-us" data-aos="fade-down" data-aos-duration="1000">
                 <span>اتصل بنا</span>
             </a>
         </div>
@@ -2160,9 +2160,8 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
-    <!-- <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script> -->
     <script src="js/main.js"></script>
 </body>
 
