--- a/technical consulting.html
+++ b/technical consulting.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="shortcut icon" type="image/jpg" href="imgs/fivicon.png">
     <title>سلسلة - الاستشارات والحلول التقنية</title>
 </head>
@@ -188,7 +189,7 @@
     <section id="another-cta" class="another-cta">
         <div class="container">
             <div class="row align-items-center text-center">
-                <div>
+                <div data-aos="fade-down" data-aos-duration="1000">
                     <p class="another-cta-text">
                         نحن في مكتب سلسلة للاستشارات نقدم خدمات الاستشارات والحلول التقنية لمساعدتك في اختيار الحلول
                         المناسبة لشركتك.
@@ -201,10 +202,10 @@
     <section id="more-info">
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
-                <figure>
+                <figure data-aos="fade-left" data-aos-duration="1000">
                     <img src="imgs/صفحة الاستشارات والخدمات التقنية/صورة رقم1.svg" class="img-fluid" alt="img">
                 </figure>
-                <div>
+                <div data-aos="fade-right" data-aos-duration="1000">
                     <p class="p">
                         نقوم بتقييم البنية التقنية الحالية لشركتك ونقدم التوصيات لتطويرها وتحديثها بما يتوافق مع أحدث
                         متطلبات تحسين محركات البحث
@@ -221,10 +222,10 @@
     <section id="more-info" class="more-info-2 bg-white">
         <div class="container">
             <div class="d-flex flex-column flex-lg-row align-items-center justify-content-between">
-                <figure class="d-lg-none d-block">
+                <figure class="d-lg-none d-block" data-aos="fade-down" data-aos-duration="1000">
                     <img src="imgs/صفحة الاستشارات والخدمات التقنية/صورة رقم2.svg" class="img-fluid" alt="img">
                 </figure>
-                <div>
+                <div data-aos="fade-left" data-aos-duration="1000">
                     <p class="p">
                         نقوم أيضًا بتحليل الاحتياجات البرمجية وتطوير حلول مخصصة تتناسب مع متطلبات عملك. 
                         ولا ننسى تقييم أمن المعلومات وخصوصية البيانات وتقديم الحلول والتدابير اللازمة لضمان سلامة
@@ -232,7 +233,7 @@
                         القانونية والتنظيمية.
                     </p>
                 </div>
-                <figure class="d-none d-lg-block">
+                <figure class="d-none d-lg-block" data-aos="fade-right" data-aos-duration="1000">
                     <img src="imgs/صفحة الاستشارات والخدمات التقنية/صورة رقم2.svg" class="img-fluid" alt="img">
                 </figure>
             </div>
@@ -241,22 +242,22 @@
 
     <section id="cta" class="tech-bd-cta">
         <div class="container">
-            <div>
+            <div data-aos="fade-down" data-aos-duration="1000">
                 <h3>الخدمات التقنية</h3>
             </div>
     </section>
 
     <section id="our-services" class="advertising-services">
         <div class="container">
-            <h3>إدارة الموقع الالكتروني</h3>
-            <p class="our-services-p our-services-title">
+            <h3 data-aos="fade-down" data-aos-duration="1100">إدارة الموقع الالكتروني</h3>
+            <p data-aos="fade-down" data-aos-duration="1000" class="our-services-p our-services-title">
                 نحن نقدم خدمات إدارة الموقع الإلكتروني لمساعدتك في الحفاظ على أداء موقعك <br
                     class="d-none d-lg-block">بأفضل حالاته وتشتمل هذه
                 الخدمات
                 على: 
             </p>
             <div class="main-our-services">
-                <div class="service-block another-2">
+                <div class="service-block another-2" data-aos="fade-down-left" data-aos-duration="1000">
                     <img src="imgs/صفحة الاستشارات والخدمات التقنية/سيكشن ادارة الموقع الالكتروني/أيقونة رقم1.svg"
                         class="img-fluid" alt="icon">
                     <p class="our-service-title">
@@ -264,14 +265,14 @@
                         استمرارية الأداء الأمثل.
                     </p>
                 </div>
-                <div class="service-block another-2">
+                <div class="service-block another-2" data-aos="fade-down-right" data-aos-duration="1000">
                     <img src="imgs/صفحة الاستشارات والخدمات التقنية/سيكشن ادارة الموقع الالكتروني/أيقونة رقم2.svg"
                         class="img-fluid" alt="icon">
                     <p class="our-service-title">
                         عمل نسخ احتياطية منتظمة لحماية بيانات الموقع والمحتوى.
                     </p>
                 </div>
-                <div class="service-block another-2">
+                <div class="service-block another-2" data-aos="fade-up-left" data-aos-duration="1000">
                     <img src="imgs/صفحة الاستشارات والخدمات التقنية/سيكشن ادارة الموقع الالكتروني/أيقونة رقم3.svg"
                         class="img-fluid" alt="icon">
                     <p class="our-service-title">
@@ -279,7 +280,7 @@
                     </p>
                 </div>
 
-                <div class="service-block another-2">
+                <div class="service-block another-2" data-aos="fade-up-right" data-aos-duration="1000">
                     <img src="imgs/صفحة الاستشارات والخدمات التقنية/سيكشن ادارة الموقع الالكتروني/أيقونة رقم4.svg"
                         class="img-fluid" alt="icon">
                     <p class="our-service-title">
@@ -287,7 +288,7 @@
                     </p>
                 </div>
             </div>
-            <div class="service-block last-service-block another-2">
+            <div class="service-block last-service-block another-2" data-aos="fade-up" data-aos-duration="1000">
                 <img src="imgs/صفحة الاستشارات والخدمات التقنية/سيكشن ادارة الموقع الالكتروني/أيقونة رقم5.svg"
                     class="img-fluid" alt="icon">
                 <p class="our-service-title">
@@ -300,30 +301,30 @@
 
     <section id="data-base">
         <div class="container">
-            <h3>إدارة قواعد البيانات</h3>
+            <h3 data-aos="fade-down" data-aos-duration="1000">إدارة قواعد البيانات</h3>
             <div class="data-base-main-block">
-                <div class="data-base-block">
+                <div class="data-base-block" data-aos="fade-down-left" data-aos-duration="1000">
                     <img src="imgs/صفحة الاستشارات والخدمات التقنية/سيكشن ادارة قواعد البيانات/أيقونة رقم1.svg"
                         class="img-fluid w-100" alt="icon">
                     <p>
                         إنشاء قواعد البيانات وتصميم الجداول اللازمة لتخزين واسترجاع المعلومات بسهولة وفعالية.
                     </p>
                 </div>
-                <div class="data-base-block">
+                <div class="data-base-block" data-aos="fade-down-right" data-aos-duration="1000">
                     <img src="imgs/صفحة الاستشارات والخدمات التقنية/سيكشن ادارة قواعد البيانات/أيقونة رقم2.svg"
                         class="img-fluid w-100" alt="icon">
                     <p>
                         تنظيف وتنقية البيانات بشكل دوري لضمان دقتها وموثوقيتها.
                     </p>
                 </div>
-                <div class="data-base-block">
+                <div class="data-base-block" data-aos="fade-up-left" data-aos-duration="1000">
                     <img src="imgs/صفحة الاستشارات والخدمات التقنية/سيكشن ادارة قواعد البيانات/أيقونة رقم3.svg"
                         class="img-fluid w-100" alt="icon">
                     <p>
                         إدارة صلاحيات الوصول لقواعد البيانات وفقًا للصلاحيات المخولة لكل مستخدم.
                     </p>
                 </div>
-                <div class="data-base-block">
+                <div class="data-base-block" data-aos="fade-up-right" data-aos-duration="1000">
                     <img src="imgs/صفحة الاستشارات والخدمات التقنية/سيكشن ادارة قواعد البيانات/أيقونة رقم4.svg"
                         class="img-fluid w-100" alt="icon">
                     <p>
@@ -338,12 +339,12 @@
     <section id="cta-2">
         <div class="container">
             <div class="text-center">
-                <p>
+                <p data-aos="fade-down" data-aos-duration="1000">
                     إذا كنت بحاجة إلى مساعدة، فلا تتردد في الاتصال بنا! نحن هنا لتقديم <br class="d-none d-lg-block">
                     الدعم والإرشاد فيما يتعلق
                     بخدماتنا وحلولنا التقنية.
                 </p>
-                <a href="tel:+966023114564" class="call-us">
+                <a href="tel:+966023114564" class="call-us" data-aos="fade-down" data-aos-duration="1000">
                     <span>اتصل بنا</span>
                 </a>
             </div>
@@ -448,6 +449,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/main.js"></script>
 </body>
 
