--- a/who-we-ara.html
+++ b/who-we-ara.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <link rel="shortcut icon" type="image/jpg" href="imgs/fivicon.png">
     <title>سلسلة - من نحن</title>
@@ -187,12 +188,14 @@
     <section id="more-about-us">
         <div class="container">
             <div class="more-about-us-block">
-                <p>سلسلة شريكك المثالي في رحلتك الريادية التي تتطلع لها، حيث نقدم لك خبراتنا الواسعة في مجال
+                <p data-aos="fade-left" data-aos-duration="1000">سلسلة شريكك المثالي في رحلتك الريادية التي تتطلع لها،
+                    حيث نقدم لك خبراتنا الواسعة في مجال
                     الاستشارات الاقتصادية والمالية
                     والقانونية ودراسات الجدوى وتخطيط الأعمال والتسويق وتأهيل الموارد البشرية بتوجيهات من خبراء
                     محترفين. في سلسلة نلبي
                     احتياجات رواد الأعمال والقائمين على المشاريع في مختلف المجالات الصناعية والتجارية والتقنية.</p>
-                <img src="imgs/صفحة من نحن/صورة رقم3.svg" class="img-fluid avatar" alt="img">
+                <img src="imgs/صفحة من نحن/صورة رقم3.svg" class="img-fluid avatar" data-aos="fade-right"
+                    data-aos-duration="1000" alt="img">
             </div>
         </div>
     </section>
@@ -201,11 +204,14 @@
         <div class="container">
             <div class="more-about-us-block more-about-us-block-2">
                 <div class="imgs">
-                    <img src="imgs/Soft skills-rafiki 1.webp" class="img-fluid one" alt="img">
-                    <img src="imgs/Soft skills-rafiki 2.webp" class="img-fluid two" alt="img">
-                    <img src="imgs/Soft skills-rafiki 3.webp" class="img-fluid three" alt="img">
+                    <img src="imgs/Soft skills-rafiki 1.webp" data-aos="fade-left" data-aos-duration="500"
+                        class="img-fluid one" alt="img">
+                    <img src="imgs/Soft skills-rafiki 2.webp" data-aos="fade-left" data-aos-duration="1000"
+                        class="img-fluid two" alt="img">
+                    <img src="imgs/Soft skills-rafiki 3.webp" data-aos="fade-left" data-aos-duration="1500"
+                        class="img-fluid three" alt="img">
                 </div>
-                <p>
+                <p data-aos="fade-right" data-aos-duration="1000">
                     انطلاقًا من مكتبنا في الرياض -المملكة العربية السعودية، نجسّر الفجوة بين الرؤية والواقع عبر سلسلة من
                     الخدمات التي تواكب
                     فكر رائد الأعمال في كل خطوة على طريق النجاح، ونضمن لك شراكة مثمرة وموثوقة لتحويل أفكارك إلى مشاريع
@@ -219,7 +225,7 @@
     <section id="more-about-us" class="more-about-us-3">
         <div class="container">
             <div class="more-about-us-block">
-                <p>
+                <p data-aos="fade-left" data-aos-duration="1000">
                     ومن هنا جاء اسمنا "سلسلة" حيث نوفر لعملائنا مجموعة متسلسلة من الخدمات التي تبدأ من دراسة الفكرة
                     وتطويرها إلى التنفيذ
                     وبناء المشروع على أرض الواقع، لنكون شريكك في كل خطوة من الرؤية إلى الواقع.
@@ -227,15 +233,16 @@
                     تخصصات مختلفة جعلت من
                     سلسلة الخيار الأول لمئات المشاريع التي طورناها على مدى سنوات عملنا.
                 </p>
-                <img src="imgs/Soft skills-rafiki.webp" class="img-fluid avatar" alt="img">
+                <img data-aos="fade-right" data-aos-duration="1000" src="imgs/Soft skills-rafiki.webp"
+                    class="img-fluid avatar" alt="img">
             </div>
         </div>
     </section>
 
     <section id="vision">
         <div class="container">
-            <h3 class="under-line-title">رؤيتنا:</h3>
-            <p class="vision-desc">
+            <h3 data-aos="fade-down" data-aos-duration="1000" class="under-line-title">رؤيتنا:</h3>
+            <p data-aos="fade-down" data-aos-duration="1000" class="vision-desc">
                 في سلسلة، نؤمن بأن قوة أي مجتمع تكمن في قدرته على تحفيز ودعم رواد الأعمال وأصحاب المشاريع، وهم العماد
                 الحقيقي لاقتصاد
                 مزدهر ومستقبل مشرق. لذلك نعمل بإلهام مستمر من رؤية المملكة العربية السعودية 2030، حيث نسعى لتحقيق
@@ -251,8 +258,8 @@
 
     <section id="vision" class="our-massage">
         <div class="container">
-            <h3 class="under-line-title">رسالتنا:</h3>
-            <p class="vision-desc">
+            <h3 data-aos="fade-down" data-aos-duration="1000" class="under-line-title">رسالتنا:</h3>
+            <p data-aos="fade-down" data-aos-duration="1000" class="vision-desc">
                 نلهم ونمكّن رواد الأعمال وأصحاب المشاريع لتحقيق طموحاتهم وتحويل أفكارهم إلى مشاريع قائمة عبر نهج متكامل
                 يجمع بين
                 الاستشارات المتخصصة والحلول الحديثة القائمة على أفضل ما توصل له الخبراء في عالم ريادة الاعمال وتشغيل
@@ -264,63 +271,63 @@
 
     <section id="our-goals">
         <div class="container">
-            <h3>أهدافنا</h3>
+            <h3 data-aos="fade-down" data-aos-duration="1000">أهدافنا</h3>
             <div class="row justify-content-center gy-4">
-                <div class="col-lg-3 col-md-6 col-12">
+                <div class="col-lg-3 col-md-6 col-12" data-aos="fade-left" data-aos-duration="1000">
                     <div class="our-goals-block">
                         <img src="imgs/صفحة من نحن/أيقونات أهدافنا/أيقونة رقم1.svg" alt="icon" class="img-fluid">
                         <h4>تعزيز الريادة</h4>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-12">
+                <div class="col-lg-3 col-md-6 col-12" data-aos="fade-down" data-aos-duration="1000">
                     <div class="our-goals-block">
                         <img src="imgs/صفحة من نحن/أيقونات أهدافنا/أيقونة رقم2.svg" alt="icon" class="img-fluid">
                         <h4>تعزيز الشفافية <br> والمصداقية </h4>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-12">
+                <div class="col-lg-3 col-md-6 col-12" data-aos="fade-down" data-aos-duration="1000">
                     <div class="our-goals-block">
                         <img src="imgs/صفحة من نحن/أيقونات أهدافنا/أيقونة رقم3.svg" alt="icon" class="img-fluid">
                         <h4>تطوير وتعزيز قدرات <br> الموارد البشرية </h4>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-12">
+                <div class="col-lg-3 col-md-6 col-12" data-aos="fade-right" data-aos-duration="1000">
                     <div class="our-goals-block">
                         <img src="imgs/صفحة من نحن/أيقونات أهدافنا/أيقونة رقم4.svg" alt="icon" class="img-fluid">
                         <h4>تعزيز مفاهيم الابتكار<br> والبحث والتطوير</h4>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-12">
+                <div class="col-lg-3 col-md-6 col-12" data-aos="fade-left" data-aos-duration="1000">
                     <div class="our-goals-block">
                         <img src="imgs/صفحة من نحن/أيقونات أهدافنا/أيقونة رقم5.svg" alt="icon" class="img-fluid">
                         <h4>تعزيز القيمة <br>المضافة</h4>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-12">
+                <div class="col-lg-3 col-md-6 col-12" data-aos="fade-down" data-aos-duration="1000">
                     <div class="our-goals-block">
                         <img src="imgs/صفحة من نحن/أيقونات أهدافنا/أيقونة رقم6.svg" alt="icon" class="img-fluid">
                         <h4>بناء شراكات<br> استراتيجية</h4>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-12">
+                <div class="col-lg-3 col-md-6 col-12" data-aos="fade-down" data-aos-duration="1000">
                     <div class="our-goals-block">
                         <img src="imgs/صفحة من نحن/أيقونات أهدافنا/أيقونة رقم7.svg" alt="icon" class="img-fluid">
                         <h4>تعزيز التواصل</h4>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-12">
+                <div class="col-lg-3 col-md-6 col-12" data-aos="fade-right" data-aos-duration="1000">
                     <div class="our-goals-block">
                         <img src="imgs/صفحة من نحن/أيقونات أهدافنا/أيقونة رقم8.svg" alt="icon" class="img-fluid">
                         <h4>توفير الموارد المالية للمشاريع</h4>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-12">
+                <div class="col-lg-3 col-md-6 col-12" data-aos="fade-up" data-aos-duration="1000">
                     <div class="our-goals-block">
                         <img src="imgs/صفحة من نحن/أيقونات أهدافنا/أيقونة رقم9.svg" alt="icon" class="img-fluid">
                         <h4>توفير برامج التدريب <br> والتطوير</h4>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-12">
+                <div class="col-lg-3 col-md-6 col-12" data-aos="fade-up" data-aos-duration="1000">
                     <div class="our-goals-block">
                         <img src="imgs/صفحة من نحن/أيقونات أهدافنا/أيقونة رقم10.svg" alt="icon" class="img-fluid">
                         <h4>تقديم التوجيه <br> والإرشاد</h4>
@@ -332,10 +339,10 @@
 
     <section id="our-value">
         <div class="container">
-            <h3>قيمنا</h3>
+            <h3 data-aos="fade-down" data-aos-duration="1000">قيمنا</h3>
             <div class="row gy-5">
                 <div class="col-lg-4 col-md-6 col-12">
-                    <div class="our-value-block text-center">
+                    <div class="our-value-block text-center" data-aos="fade-left" data-aos-duration="1000">
                         <img src="imgs/صفحة من نحن/أيقونات قيمنا/أيقونة رقم1.svg" class="img-fluid" alt="icon">
                         <h4>الابتكار</h4>
                         <p>نعمل لتحفيز الابتكار والتفكير الإبداعي، حيث نقدم حلولاً مُبتكرة تلبي احتياجات رواد الأعمال
@@ -344,14 +351,14 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
-                    <div class="our-value-block text-center">
+                    <div class="our-value-block text-center" data-aos="fade-down" data-aos-duration="1000">
                         <img src="imgs/صفحة من نحن/أيقونات قيمنا/أيقونة رقم2.svg" class="img-fluid" alt="icon">
                         <h4>التعاون</h4>
                         <p>نؤمن بقوة التعاون والشراكة، حيث نعمل معاً لتحقيق أهداف مشتركة وبناء مستقبل أفضل للجميع.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
-                    <div class="our-value-block text-center">
+                    <div class="our-value-block text-center" data-aos="fade-right" data-aos-duration="1000">
                         <img src="imgs/صفحة من نحن/أيقونات قيمنا/أيقونة رقم3.svg" class="img-fluid" alt="icon">
                         <h4>الجودة</h4>
                         <p>نحرص على تقديم خدمات ذات جودة عالية تتسم بالدقة والاحترافية، مع التركيز على تحقيق التميز في
@@ -359,7 +366,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
-                    <div class="our-value-block text-center">
+                    <div class="our-value-block text-center" data-aos="fade-left" data-aos-duration="1000">
                         <img src="imgs/صفحة من نحن/أيقونات قيمنا/أيقونة رقم4.svg" class="img-fluid" alt="icon">
                         <h4>النزاهة</h4>
                         <p>نحافظ على مبادئ النزاهة والشفافية في جميع تعاملاتنا، مع الالتزام بأعلى معايير الأخلاقيات
@@ -367,7 +374,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
-                    <div class="our-value-block text-center">
+                    <div class="our-value-block text-center" data-aos="fade-up" data-aos-duration="1000">
                         <img src="imgs/صفحة من نحن/أيقونات قيمنا/أيقونة رقم5.svg" class="img-fluid" alt="icon">
                         <h4>التميز</h4>
                         <p>نسعى دائماً لتحقيق التميز في كل جوانب عملنا، مع التركيز على تقديم حلول مُخصصة تلبي احتياجات
@@ -375,7 +382,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-12">
-                    <div class="our-value-block text-center">
+                    <div class="our-value-block text-center" data-aos="fade-right" data-aos-duration="1000">
                         <img src="imgs/صفحة من نحن/أيقونات قيمنا/أيقونة رقم6.svg" class="img-fluid" alt="icon">
                         <h4>المسؤولية الاجتماعية</h4>
                         <p>نسعى لدعم التنمية المستدامة في المملكة بما يتماشى مع رؤية المملكة 2030.</p>
@@ -484,6 +491,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/main.js"></script>
 
 </body>
